# maxOn

./: .dockerignore  .env  .env.example  .env.template  .gitignore  .railway  AGENT_CONTEXT.md  ANALYTICS.md  CLAUDE.md  QUICK_START_PROMPT.md  RAILWAY_DEPLOY.md  RAILWAY_DEPLOY_GUIDE.md  README.md  WARP.md  WEBAPP_REGISTRATION.md  docker-compose.yml  events.db  push.sh  railway.toml  requirements.txt  telegram_bot.py  test_goal_scheduling_flow.py  test_mixpanel.py
.claude/: settings.local.json
.github/workflows/: railway-deploy.yml
backend/: app.py  models.py
local-install/: QUICKSTART.txt  README.md
local-install/shared/: database.py
mvp/: .env  app.py  config.py  renderer.py
mvp/ai_backend/: nlp.py  prompts.py  router.py
mvp/core/: db.py  events.py  models.py  router.py  selectors.py  sets.py
mvp/core_backend/: events.py  storage.py
mvp/llm/: nlp.py  prompts.py
services/api-gateway/: Dockerfile  requirements.txt
services/calendar/: Dockerfile  README.md  pyproject.toml  railway.toml
services/calendar/app/: config.py  db.py  main.py  models.py  schemas.py
services/calendar/app/routes/: calendars.py
services/calendar/app/services/: __init__.py  calendars.py  events.py  external_calendars.py
services/calendar/tests/: test_app.py
services/context/: Dockerfile
services/core/: Dockerfile
services/llm/: Dockerfile  requirements.txt
services/mini-app/: .dockerignore  .env.example  .env.production  .env.vercel  .gitignore  DEPLOY.md  Dockerfile  README.md  REPORT.md  WEBAPP_SETUP.md  index.html  (+4 more)
shared/: __init__.py
tests/: test_app.py
(+155 files in other folders)
